# hacathon-open-ai

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py  inference.py  models.py
server /: inference.py
