[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "women-safety-ai"
version = "0.1.0"
description = "Women Safety AI Moderator"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "gradio>=4.0.0",
    "fastapi",
    "uvicorn",
    "requests",
    "openenv-core>=0.2.0",
    "openenv>=0.2.0"
]

[project.scripts]
server = "app:main"

[tool.uv]
managed = true
