[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "women-safety-ai"
version = "0.1.0"
description = "Women Safety AI Moderator"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "requests",
    "python-multipart"
]

[project.scripts]
server = "server.app:main"

[tool.uv]
managed = true
